# long-calc

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  InfFloatLib.vcxproj  InfFloatLib.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
lib/: InfFloat.cpp  InfFloat.h
